# meta-meme

./: .gitignore  0xDA51PrefixClassification.md  AUTOMORPHIC_PERF_TRACE.md  BURN_GPU_MINIZINC_INTEGRATION.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_GAME.md  CLOUDFLARE_SECRETS.md  CLOUDFLARE_WORKERS_BUILD_SOP.md  Cargo.toml  DIAGONAL_THEORY.md  Dimensionality-Problem.md  Dockerfile  ERDFA_INTEGRATION.md  EXTRACTION_TODO.md  FINAL_SUMMARY.md  FRACTRAN-MOONSHINE-ORACLE.md  GET_SHARE_LINK.md  GLOSSARY.md  HUGGINGFACE_DEPLOY.md  HUGGINGFACE_GRADIO.md  LANGSEC-ZIGGURAT.md  LESSONS_LEARNED.md  MERGE_SUMMARY.md  PARQUET_INDEX.md  PROJECT_SUMMARY.md  Paper.tex  RDF_QUERY.md  README.md  README.npm.md  README_DATASET.md  README_HERMETIC.md  README_HF.md  README_STREAMLIT.md  SCHEMA_COMPLEXITY.md  SEMANTIC_LATTICE.md  SERVICE_STATUS.md  STREAMLIT_DEPLOY.md  STREAMLIT_JWT_RDFA.md  SYSTEMD_INTEGRATION.md  TESTING.md  (+113 more)
.huggingface/: config.yaml
coq/: .AutomorphicLoop.aux  .AutomorphicOrbit.aux  .ExtractLattice.aux  .ExtractOrbit.aux  .ExtractToRust.aux  .ProofLattice.aux  AutomorphicLoop.glob  AutomorphicLoop.v  AutomorphicLoop.vo  AutomorphicOrbit.glob  AutomorphicOrbit.v  BridgeLattice.v  ExtractFixedPoint.v  ExtractLattice.glob  ExtractLattice.v  ExtractOrbit.glob  ExtractOrbit.v  ExtractToRust.glob  ExtractToRust.v  ExtractToRust.vo  FixedPointConstruction.v  PERF_WITNESS.md  ProofLattice.glob  ProofLattice.v  analyze_harmonics.py  extract.perf.data  fingerprint_lattice.py  fixedpoint.perf.data  lattice.perf.data  lattice.perf.data.old  lattice_extract.perf.data  lattice_extract.perf.data.old  lattice_fingerprints.json  metacoq_extract.perf.data  monster_harmonics.json  orbit.perf.data  orbit.perf.data.old  orbit_extract.perf.data  shell.nix
docs/: metameme-symbols.md  metaprotocols-glyphic.md  narrative.md
metameme/: GödelGolem.md  herosjourney.md  quasi-meta-eigenvector.md
minizinc/: automorphic_galois_loop.mzn  conformal_emoji_mapping.mzn  emoji_mapping_data.dzn  homotopy_data.dzn  homotopy_proof.mzn  (+7 more)
(+266 files in other folders)
