[package]
name = "metameme-zkwasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discover_parquet"
path = "src/discover_parquet.rs"

[[bin]]
name = "parquet_schema"
path = "src/parquet_schema.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
polars = { version = "0.36", features = ["parquet", "lazy", "serde"] }
walkdir = "2"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
